Spacing fix

--- a/style.css
+++ b/style.css
@@ -309,7 +309,6 @@ footer p {
 
 .meds {
     font-size: 22px;
-    margin-bottom: 12px;
 }
 
 /* Mobile optimisations */
